testsuite/tests/ghc-regress/rename/should_fail/rnfail028.hs
-- !!! illegal to export a module we haven't imported.
module ShouldFail ( module List ) where
